manifests/default/argocd/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.termz.xyz`) || Host(`argocd.terminalnode.xyz`)
      priority: 10
      services:
        - name: argocd-server
          port: http
    - kind: Rule
      match: (Host(`argocd.termz.xyz`) || Host(`argocd.terminalnode.xyz`)) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: http
          scheme: h2c
  tls:
    secretName: argocd-tls-secret

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-dot-gwai-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.gwai`)
      priority: 10
      services:
        - name: argocd-server
          port: http
    - kind: Rule
      match: Host(`argocd.gwai`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: http
          scheme: h2c
  tls:
    secretName: argocd-dot-gwai-secret
